organizacion de carpetas css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <base haref="http://127.0.0.1:5500">
     <meta name="keywords" content="restaurante vegano, carne vegana, especialidades saludables, Miami, menú vegano, comida vegetariana">
     <meta name="description" content="Restaurante vegano en Miami que ofrece platos de carne vegana y especialidades saludables. Descubre nuestro menú y disfruta de una experiencia culinaria única.">
+    <link rel="stylesheet" href="css/first.css">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
                 <li><a href="#"><i class="fab fa-facebook" style="color: green;"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram" style="color: green;"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter" style="color: green;"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin" style="color: green;"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin" style="color: rgb(128, 0, 90);"></i></a></li>
                 <li><a href="#otraSeccion"><i class="fas fa-search"></i></a></li>
 
             </ul>
@@ -35,8 +36,7 @@
 
     <nav id="mainMenu">
         <div>
-            <i class="fas fa-utensils"></i> <!-- Icono de restaurante -->
-            <a href="#">Millenium</a>
+            <a href="#"><img src="img/logo.png" id="logo">Millenium</a>
         </div>
         <div>
             <ul>
@@ -74,21 +74,21 @@
 
     <section id="type-of-food">
         <div class="card" style="width: 18rem;">
-            <img src="comida-vegana.jpg" class="card-img-top" alt="imagen de un plato de comida sana"
+            <img src="img/comida-vegana.jpg" class="card-img-top" alt="imagen de un plato de comida sana"
                 style="width:300px;">
             <div class="card-body">
                 <a href="#" class="btn btn-primary">Booking Table</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="vegetales-salteados.png" class="card-img-top" alt="imagen de un plato de comida sana"
+            <img src="img/vegetales-salteados.png" class="card-img-top" alt="imagen de un plato de comida sana"
                 style="width:300px;">
             <div class="card-body">
                 <a href="#" class="btn btn-primary">Booking Table</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="comida-vegana.jpg" class="card-img-top" alt="imagen de un plato de comida sana"
+            <img src="img/comida-vegana.jpg" class="card-img-top" alt="imagen de un plato de comida sana"
                 style="width:300px;">
             <div class="card-body">
                 <a href="#" class="btn btn-primary">Booking Table</a>
@@ -107,7 +107,7 @@
     </style>
 
     <div class="vegan-meat">
-        <img src="carne-vegana.jpg" alt="imagen de un plato de carne vegana" style="width:40%; height:auto;">
+        <img src="img/carne-vegana.jpg" alt="imagen de un plato de carne vegana" style="width:40%; height:auto;">
     </div>
 
     <div>
@@ -242,39 +242,39 @@
     <div id="list-name">
         <ul>
             <li>
-                <img src="berenjenas.jpg" alt="imagen de un plato único vegano"
+                <img src="img/berenjenas.jpg" alt="imagen de un plato único vegano"
                     style="width:50px; height:auto;">
-                <h6>Creativa Creación<i class="fas fa-dollar-sign"> 45</i></h6>
+                <h6>Creativa Creación <hr> <i class="fas fa-dollar-sign">45</i></h6>
                 <p>Sumérgete en esta creación única con sabores innovadores y frescura incomparable.</p>
             </li>
             <li>
-                <img src="tomates-quesos.jpg" alt="imagen de un plato único vegano"
+                <img src="img/tomates-quesos.jpg" alt="imagen de un plato único vegano"
                     style="width:50px; height:auto;">
-                <h6>Sinfonía de Sabores<i class="fas fa-dollar-sign"> 50</i></h6>
+                <h6>Sinfonía de Sabores <hr> <i class="fas fa-dollar-sign"> 50</i></h6>
                 <p>Experimenta una sinfonía de sabores en este plato que combina texturas y ingredientes exquisitos.</p>
             </li>
             <li>
-                <img src="calabacines.jpg" alt="imagen de un plato único vegano"
+                <img src="img/calabacines.jpg" alt="imagen de un plato único vegano"
                     style="width:50px; height:auto;">
-                <h6>Delirio de Delicias<i class="fas fa-dollar-sign"> 55</i></h6>
+                <h6>Delirio de Delicias <hr> <i class="fas fa-dollar-sign"> 55</i></h6>
                 <p>Embárcate en un delirio de delicias con este plato lleno de sorpresas y explosión de sabores.</p>
             </li>
             <li>
-                <img src="comida-vegana.jpg" alt="imagen de un plato único vegano"
+                <img src="img/comida-vegana.jpg" alt="imagen de un plato único vegano"
                     style="width:50px; height:auto;">
-                <h6>Aventura Culinary<i class="fas fa-dollar-sign"> 60</i></h6>
+                <h6>Aventura Culinary <hr> <i class="fas fa-dollar-sign"> 60</i></h6>
                 <p>Embárcate en una aventura culinaria con este plato que te llevará a nuevos horizontes de sabor.</p>
             </li>
             <li>
-                <img src="berenjenas.jpg" alt="imagen de un plato único vegano"
+                <img src="img/berenjenas.jpg" alt="imagen de un plato único vegano"
                     style="width:50px; height:auto;">
-                <h6>Sinfonía de Colores<i class="fas fa-dollar-sign"> 65</i></h6>
+                <h6>Sinfonía de Colores <hr> <i class="fas fa-dollar-sign"> 65</i></h6>
                 <p>Disfruta de una sinfonía de colores y sabores en este plato vibrante y nutritivo.</p>
             </li>
             <li>
-                <img src="carne-vegana.jpg" alt="imagen de un plato único vegano"
+                <img src="img/carne-vegana.jpg" alt="imagen de un plato único vegano"
                     style="width:50px; height:auto;">
-                <h6>Exquisita Elegancia<i class="fas fa-dollar-sign"> 70</i></h6>
+                <h6>Exquisita Elegancia  <hr> <i class="fas fa-dollar-sign"></i> 23</h6>
                 <p>Experimenta la exquisita elegancia de este plato que combina ingredientes premium y presentación única.</p>
             </li>
         </ul>
@@ -294,7 +294,7 @@
         <div id="reservation">
 
             <div id="image-chef">
-                <img src="imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
+                <img src="img/imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
             </div>
 
             <div> <!-- formulario de reserva -->
@@ -319,22 +319,22 @@
 
         <div id="professionals-list">
             <div>
-                <img src="imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
+                <img src="img/imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
                 <h6>Professionals Name</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
             </div>
             <div>
-                <img src="imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
+                <img src="img/imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
                 <h6>Professionals Name</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
             </div>
             <div>
-                <img src="imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
+                <img src="img/imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
                 <h6>Professionals Name</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
             </div>
             <div>
-                <img src="imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
+                <img src="img/imagen-chef.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
                 <h6>Professionals Name</h6>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
             </div>
@@ -390,7 +390,7 @@
             <button>Read More</button>
         </div>
         <div>
-            <img src="mapa-usa.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
+            <img src="img/mapa-usa.jpg" alt="imagen de un chef" style="width:50%; height:auto;">
         </div>
     </div>
 
@@ -398,7 +398,7 @@
     <div id="blog">
 
         <div class="card" style="width: 18rem;">
-            <img src="dos-vinos.jpg" class="card-img-top" alt="imagen de vino en una copa">
+            <img src="img/dos-vinos.jpg" class="card-img-top" alt="imagen de vino en una copa">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -413,12 +413,12 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <hr>
               <a href="#" class="btn btn-primary">Read More</a>
-              <img src="vegetales-salteados.png" class="card-img-top" alt="imagen de vegetales salteados">
+              <img src="img/vegetales-salteados.png" class="card-img-top" alt="imagen de vegetales salteados">
             </div>
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="carne-vegana.jpg" class="card-img-top" alt="imagen de carne vegana al grill">
+            <img src="img/carne-vegana.jpg" class="card-img-top" alt="imagen de carne vegana al grill">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -460,6 +460,7 @@
             </form>
     </footer>
 
+    <script src="https://kit.fontawesome.com/ba786c1c07.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
